refactor: Fixing the test dependencies

--- a/src/serac/physics/operators/tests/CMakeLists.txt
+++ b/src/serac/physics/operators/tests/CMakeLists.txt
@@ -6,10 +6,11 @@
 
 if (ENABLE_GTEST)
 
-    set(test_dependencies serac_physics serac_coefficients test_utils)
+    set(test_dependencies gtest serac_physics_operators)
     blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
     set(operators_tests
+        serac_operator.cpp
         serac_odes.cpp)
 
     foreach(filename ${operators_tests})
