feature: First cut at the sensitivity analysis for the solid module

--- a/src/serac/physics/CMakeLists.txt
+++ b/src/serac/physics/CMakeLists.txt
@@ -25,6 +25,7 @@ set(physics_headers
 
 set(physics_dependencies
     serac_infrastructure
+    serac_coefficients
     serac_physics_integrators
     serac_physics_materials
     serac_numerics
