--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -117,8 +117,12 @@ if(NOT SERAC_FOUND)
       set(CALIPER_DIR ${SERAC_CALIPER_DIR}) 
     endif()
     # See comment in SetupSeracThirdParty.cmake
-    if(SERAC_ENABLE_CUDA AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.17)
-      find_package(CUDAToolkit REQUIRED)
+    if(SERAC_ENABLE_CUDA)
+      if(CMAKE_VERSION VERSION_LESS 3.17)
+        message(FATAL_ERROR "Serac+Caliper+CUDA requires CMake > 3.17.")
+      else()
+        find_package(CUDAToolkit REQUIRED)
+      endif() 
     endif()
     find_dependency(caliper REQUIRED NO_DEFAULT_PATH PATHS "${CALIPER_DIR}")
   endif()
