--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,11 @@
 # Basic CMake Setup
 #------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.8)
+if(ENABLE_CUDA)
+    cmake_minimum_required(VERSION 3.18)
+else()
+    cmake_minimum_required(VERSION 3.14)
+endif()
 
 project(serac LANGUAGES CXX C)
 
@@ -123,9 +127,12 @@ add_subdirectory(examples)
 # Add Code Checks
 #------------------------------------------------------------------------------
 
-serac_add_code_checks(PREFIX   serac
-                      INCLUDES /src/ /tests/
-                      EXCLUDES cmake/blt uberenv_libs)
+message(STATUS "Serac Code Checks: ${SERAC_ENABLE_CODE_CHECKS}")
+if (SERAC_ENABLE_CODE_CHECKS)
+    serac_add_code_checks(PREFIX   serac
+                          INCLUDES /src/ /tests/
+                          EXCLUDES cmake/blt uberenv_libs)
+endif()
 
 #------------------------------------------------------------------------------
 # Export Targets
