--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -1,18 +1,10 @@
-FROM axom/compilers:clang-10
+FROM axom/compilers:ubuntu-20-clang-10_07-19-21_23h-07m
 LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich lcov xsltproc python3 python3-pip -fy
-RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
-RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
-RUN sudo python3 -m pip install --upgrade pip
-RUN sudo python3 -m pip install clingo
-
-# Avoid building CMake from scratch
-RUN wget https://cmake.org/files/v3.18/cmake-3.18.5-Linux-x86_64.sh
-RUN sudo sh cmake-3.18.5-Linux-x86_64.sh --prefix=/usr --exclude-subdir
+RUN sudo apt-get install ssh libopenblas-dev mpich gfortran -fy
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
@@ -22,14 +14,15 @@ USER serac
 RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/LLNL/serac.git
 
 # New containers will use Python3
-RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu18/ \
-                                                     --project-json=.uberenv_config.json \
-                                                     --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k \
-             && rm -rf /home/serac/serac_tpls/builds
+RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu20/ \
+                                                       --project-json=.uberenv_config.json \
+                                                       --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k
+# white238: commented out due to logs disapearing and this being saved due to layering
+#RUN rm -rf /home/serac/serac_tpls/builds
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
 
 # Make sure the new hostconfig worked
-RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test \
-             && cd /home/serac && rm -rf serac
+RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test
+RUN rm -rf serac
