preliminary run of 3-way merge

--- a/src/serac/physics/utilities/functional/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/CMakeLists.txt
@@ -28,6 +28,7 @@ set(functional_headers
     detail/segment_L2.inl
     detail/metaprogramming.hpp
     integral_utilities.hpp
+    domain_integral_shared.hpp
     )
 
 if(ENABLE_CUDA)
