test: Add a serac-specific testing cmake macro and remove the gtest checks

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,65 +4,35 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
-if (ENABLE_GTEST)
+set(mfem_tests
+    mfem_ex9p_blockilu.cpp
+    )
 
-    set(mfem_tests
-        mfem_ex9p_blockilu.cpp
-        )
+serac_add_tests( SOURCES ${mfem_tests}
+                 DEPENDS_ON gtest serac_physics_utilities
+                 NUM_MPI_TASKS 2)
 
-    foreach(filename ${mfem_tests})
-        get_filename_component(test_name ${filename} NAME_WE)
+set(language_tests
+    copy_elision.cpp
+    mfem_array_std_algo.cpp)
 
-        blt_add_executable(NAME        ${test_name}
-                           SOURCES     ${filename}
-                           OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                           DEPENDS_ON  gtest serac_physics_utilities
-                           FOLDER      serac/tests )
-        blt_add_test(NAME          ${test_name}
-                     COMMAND       ${test_name}
-                     NUM_MPI_TASKS 2 )
-    endforeach()
+serac_add_tests( SOURCES ${language_tests}
+                 DEPENDS_ON gtest mfem mpi)
 
-    set(language_tests
-        copy_elision.cpp
-        mfem_array_std_algo.cpp)
+if(ENABLE_CUDA)
+    # CUDA smoke test
+    blt_add_library( NAME       serac_cuda_smoketest_kernel
+                     SOURCES    serac_cuda_smoketest_kernel.cpp 
+                     DEPENDS_ON cuda)
 
-    foreach(filename ${language_tests})
-        get_filename_component(test_name ${filename} NAME_WE)
+    serac_add_tests( SOURCES serac_cuda_smoketest.cpp
+                     DEPENDS_ON serac_cuda_smoketest_kernel gtest)
+endif()
 
-        blt_add_executable(NAME        ${test_name}
-                           SOURCES     ${filename}
-                           OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                           DEPENDS_ON  gtest mfem mpi 
-                           FOLDER      serac/tests )
-        blt_add_test(NAME          ${test_name}
-                     COMMAND       ${test_name}
-                     NUM_MPI_TASKS 1 )
-    endforeach()
+if(SERAC_USE_PETSC)
 
-    if(ENABLE_CUDA)
-        # CUDA smoke test
-        blt_add_library( NAME       serac_cuda_smoketest_kernel
-                         SOURCES    serac_cuda_smoketest_kernel.cpp 
-                         DEPENDS_ON cuda)
-        blt_add_executable( NAME        serac_cuda_smoketest
-                            SOURCES     serac_cuda_smoketest.cpp 
-                            OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                            DEPENDS_ON  serac_cuda_smoketest_kernel gtest
-                            FOLDER      serac/tests)
-        blt_add_test( NAME          serac_cuda_smoketest
-                      COMMAND       serac_cuda_smoketest )
-    endif()
-
-    if(SERAC_USE_PETSC)
-        blt_add_executable( NAME        petsc_smoketest
-                            SOURCES     petsc_smoketest.cpp
-                            OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                            DEPENDS_ON  PETSc gtest
-                            FOLDER      serac/tests )
-        blt_add_test(NAME         petsc_smoketest
-                    COMMAND       petsc_smoketest
-                    NUM_MPI_TASKS 4 )
-    endif()
+    serac_add_tests( SOURCES petsc_smoketest.cpp
+                     DEPENDS_ON PETSc gtest
+                     NUM_MPI_TASKS 4)
 
 endif()
