--- a/src/serac/infrastructure/tests/CMakeLists.txt
+++ b/src/serac/infrastructure/tests/CMakeLists.txt
@@ -4,27 +4,13 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
-if (ENABLE_GTEST)
+set(test_dependencies gtest serac_physics)
+blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
-    set(test_dependencies gtest)
-    blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+set(infrastructure_tests
+    serac_error_handling.cpp
+    serac_input.cpp
+    serac_profiling.cpp)
 
-    set(intrastructure_tests
-        serac_error_handling.cpp
-        serac_input.cpp
-        serac_profiling.cpp)
-
-    foreach(filename ${infrastructure_tests})
-        get_filename_component(test_name ${filename} NAME_WE)
-
-        blt_add_executable(NAME        ${test_name}
-                           SOURCES     ${filename}
-                           OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                           DEPENDS_ON  ${test_dependencies}
-                           FOLDER      serac/tests )
-        blt_add_test(NAME          ${test_name}
-                     COMMAND       ${test_name}
-                     NUM_MPI_TASKS 1 )
-    endforeach()
-
-endif()
+serac_add_tests( SOURCES ${infrastructure_tests}
+                 DEPENDS_ON ${test_dependencies})
