--- a/src/serac/physics/operators/tests/CMakeLists.txt
+++ b/src/serac/physics/operators/tests/CMakeLists.txt
@@ -4,26 +4,12 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
-if (ENABLE_GTEST)
+set(test_dependencies gtest serac_physics_operators)
+blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
-    set(test_dependencies gtest serac_physics_operators)
-    blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+set(operators_tests
+    serac_operator.cpp
+    serac_odes.cpp)
 
-    set(operators_tests
-        serac_operator.cpp
-        serac_odes.cpp)
-
-    foreach(filename ${operators_tests})
-        get_filename_component(test_name ${filename} NAME_WE)
-
-        blt_add_executable(NAME        ${test_name}
-                           SOURCES     ${filename}
-                           OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                           DEPENDS_ON  ${test_dependencies}
-                           FOLDER      serac/tests )
-        blt_add_test(NAME          ${test_name}
-                     COMMAND       ${test_name}
-                     NUM_MPI_TASKS 1 )
-    endforeach()
-
-endif()
+serac_add_tests( SOURCES ${operators_tests}
+                 DEPENDS_ON ${test_dependencies})
