--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -70,11 +70,11 @@ quartz-gcc_8_3_1-src:
 quartz-clang_10_0_0-full:
   variables:
     COMPILER: "clang@10.0.0"
-    SPEC: "%${COMPILER}"
+    SPEC: "--spec=%${COMPILER}"
   extends: .full_build_on_quartz
 
 quartz-gcc_8_3_1-full:
   variables:
     COMPILER: "gcc@8.3.1"
-    SPEC: "%${COMPILER}"
+    SPEC: "--spec=%${COMPILER}"
   extends: .full_build_on_quartz
