trying to create a minimal error reproducer for mfem

--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -51,7 +51,8 @@ if(ENABLE_CUDA)
 
     set(functional_tests_cuda
         tensor_unit_tests_cuda.cu
-        functional_comparisons_cuda.cu)
+        functional_comparisons_cuda.cu
+        mfem_issue_reproducer.cu)
 
     serac_add_tests( SOURCES ${functional_tests_cuda}
                      DEPENDS_ON gtest serac_functional ${functional_depends} cuda)
