debug: remove serac from mfem reproducer

--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -51,10 +51,12 @@ if(ENABLE_CUDA)
 
     set(functional_tests_cuda
         tensor_unit_tests_cuda.cu
-        functional_comparisons_cuda.cu
-        mfem_issue_reproducer.cu)
+        functional_comparisons_cuda.cu)
 
     serac_add_tests( SOURCES ${functional_tests_cuda}
                      DEPENDS_ON gtest serac_functional ${functional_depends} cuda)
+
+    serac_add_tests( SOURCES mfem_issue_reproducer.cu
+                     DEPENDS_ON mfem cuda cublasLt)
 
 endif()
