--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -49,14 +49,16 @@ endforeach()
 
 if(ENABLE_CUDA)
 
-    set(functional_tests_cuda
+    set(functional_tests_cudaldd 
         tensor_unit_tests_cuda.cu
         functional_comparisons_cuda.cu)
 
     serac_add_tests( SOURCES ${functional_tests_cuda}
                      DEPENDS_ON gtest serac_functional ${functional_depends} cuda)
 
+    # FIXME: Different linker is used depending on whether axom is a dependency??
+    # clang directly (with axom) or the MPI wrapper (without axom)
     serac_add_tests( SOURCES mfem_issue_reproducer.cu
-                     DEPENDS_ON mfem cuda cublasLt)
+                     DEPENDS_ON mfem cuda mpi axom)
 
 endif()
