added some more documentation and added .cuh to BLT_C_FILE_EXTS to code formatting on more cuda files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,10 @@ add_subdirectory(examples)
 #------------------------------------------------------------------------------
 
 message(STATUS "Serac Code Checks: ${SERAC_ENABLE_CODE_CHECKS}")
+
+# Add CUDA related files to code style checking list
+list(APPEND BLT_C_FILE_EXTS ".cuh")
+
 if (SERAC_ENABLE_CODE_CHECKS)
     serac_add_code_checks(PREFIX   serac
                           INCLUDES /src/ /tests/
