--- a/scripts/docker/dockerfile_gcc-9
+++ b/scripts/docker/dockerfile_gcc-9
@@ -1,10 +1,10 @@
-FROM axom/compilers:ubuntu-20-gcc-9_07-06-21_11h-51m
+FROM axom/compilers:ubuntu-20-gcc-9_08-24-21_19h-43m
 LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
-RUN sudo apt-get install ssh libopenblas-dev mpich gfortran -fy
+RUN sudo apt-get install gfortran libopenblas-dev mpich ssh -fy
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
@@ -15,8 +15,8 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 
 # New containers will use Python3
 RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu20/ \
-                                                       --project-json=.uberenv_config.json \
-                                                       --spec=%gcc@9.3.0 --prefix=/home/serac/serac_tpls -k
+                                                     --project-json=.uberenv_config.json \
+                                                     --spec=%gcc@9.3.0 --prefix=/home/serac/serac_tpls -k
 # white238: commented out due to logs disapearing and this being saved due to layering
 #RUN rm -rf /home/serac/serac_tpls/builds
 
