--- a/scripts/docker/dockerfile_gcc-9
+++ b/scripts/docker/dockerfile_gcc-9
@@ -4,7 +4,7 @@ ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
-RUN sudo apt-get install gfortran libopenblas-dev mpich ssh -fy
+RUN sudo apt-get install doxygen gfortran libopenblas-dev mpich python3-sphinx ssh -fy
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
