--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -6,6 +6,12 @@
 
 # This test is all constexpr-evaluated, so it doesn't
 # actually need to run, if it compiles without error, the tests have passed
+blt_add_executable(NAME        functional_mfem_ex1
+                   SOURCES     functional_mfem_ex1.cpp
+                   OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
+                   DEPENDS_ON  serac_functional ${functional_depends}
+                   FOLDER      serac/tests)
+
 blt_add_executable(NAME        tensor_unit_tests
                    SOURCES     tensor_unit_tests.cpp
                    OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
