--- a/src/serac/physics/utilities/functional/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/CMakeLists.txt
@@ -57,3 +57,8 @@ install(TARGETS              serac_functional
 if(ENABLE_TESTS)
    add_subdirectory(tests)
 endif()
+
+#if(ENABLE_BENCHMARKS)
+   add_subdirectory(benchmarking)
+#endif()
+
