--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -52,6 +52,7 @@ if(ENABLE_CUDA)
     set(functional_tests_cuda 
         tensor_unit_tests_cuda.cu 
         functional_comparisons_cuda.cu
+        quadrature_data_cuda.cu
        )
 
     serac_add_tests( SOURCES ${functional_tests_cuda}
