--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,5 +76,5 @@ jobs:
   - script:  |
       ci_env=`bash <(curl -s https://codecov.io/env)`
       echo " -e $TEST_TARGET -e $COMPILER -e $DO_STYLE_CHECK -e $DO_COVERAGE_CHECK -e $CMAKE_EXTRA_FLAGS $(Compiler_ImageName) ./scripts/azure-pipelines/linux-check.sh"
-      docker run --rm -v `pwd`:/home/serac/serac $ci_env -e TEST_TARGET -e DO_STYLE_CHECK -e DO_COVERAGE_CHECK -e HOST_CONFIG $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-check.sh
+      docker run --rm -v `pwd`:/home/serac/serac $ci_env -e DO_COVERAGE_CHECK  -e DO_DOCS_CHECK -e DO_STYLE_CHECK -e HOST_CONFIG $(Compiler_ImageName) ./serac/scripts/azure-pipelines/linux-check.sh
     displayName: '$(TEST_TARGET) Style Check'
