add graphviz to docker images, try deleting builds to lower size

--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -4,7 +4,7 @@ ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
-RUN sudo apt-get install doxygen gfortran libopenblas-dev mpich python3-sphinx ssh -fy
+RUN sudo apt-get install doxygen gfortran graphviz libopenblas-dev mpich python3-sphinx ssh -fy
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
@@ -16,13 +16,11 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 # New containers will use Python3
 RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu20/ \
                                                      --project-json=.uberenv_config.json \
-                                                     --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k
-# white238: commented out due to logs disapearing and this being saved due to layering
-#RUN rm -rf /home/serac/serac_tpls/builds
+                                                     --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k \
+             && rm -rf /home/serac/serac_tpls/builds
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
 
 # Make sure the new hostconfig worked
-RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test
-RUN rm -rf serac
+RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test && rm -rf serac
