fix: Evaluate the thermal expansion coefficients and add a test

--- a/src/serac/physics/tests/CMakeLists.txt
+++ b/src/serac/physics/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ set(solver_tests
     serac_solid_adjoint.cpp
     serac_thermal_solver.cpp
     serac_thermal_structural_solver.cpp
+    serac_thermal_expansion.cpp
     )
 
 serac_add_tests( SOURCES ${solver_tests}
