--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -14,10 +14,7 @@ blt_add_executable(NAME        tensor_unit_tests
 
 # Then add the examples/tests
 set(functional_tests_serial
-    functional_basic.cpp
-    functional_qoi.cpp
-    functional_nonlinear.cpp
-    functional_boundary_test.cpp
+    restriction_test.cpp
     hcurl_unit_tests.cpp
     test_tensor_ad.cpp
     array_test.cpp
@@ -28,6 +25,11 @@ serac_add_tests( SOURCES ${functional_tests_serial}
 
 # Then add the examples/tests
 set(functional_tests_mpi
+    functional_basic.cpp
+    functional_qoi.cpp
+    functional_nonlinear.cpp
+    functional_boundary_test.cpp
+ 
     functional_comparisons.cpp
     functional_comparison_L2.cpp
     functional_material_state_test.cpp
