build: attempt to build/run cuda tests

--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -60,10 +60,10 @@ if(ENABLE_CUDA)
     # until it gets fixed, these tests are disabled to avoid CI
     # preventing pull requests from going through
     set(functional_tests_cuda 
-        #tensor_unit_tests_cuda.cu 
-        #functional_comparisons_cuda.cu
-        #array_test_cuda.cu
-        #quadrature_data_cuda.cu
+        tensor_unit_tests_cuda.cu 
+        functional_comparisons_cuda.cu
+        array_test_cuda.cu
+        quadrature_data_cuda.cu
        )
 
     serac_add_tests( SOURCES ${functional_tests_cuda}
