refactor: Move the mesh stuff out of numerics and into its own directory

--- a/src/serac/CMakeLists.txt
+++ b/src/serac/CMakeLists.txt
@@ -7,4 +7,4 @@
 add_subdirectory(infrastructure)
 add_subdirectory(numerics)
 add_subdirectory(physics)
-add_subdirectory(coefficients)
+add_subdirectory(mesh)
