fix includes and inheritance, mfem loading for axom, etc

--- a/src/serac/infrastructure/CMakeLists.txt
+++ b/src/serac/infrastructure/CMakeLists.txt
@@ -41,6 +41,14 @@ blt_add_library(
     DEPENDS_ON  ${infrastructure_depends}
     )
 
+if (NOT AXOM_DIR)
+    # This really shouldn't be needed but it keeps getting dropped from axom.
+    # It certainly shouln't go here either.
+    target_include_directories(serac_infrastructure SYSTEM PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../../axom/src>
+        )
+endif()
+
 target_include_directories(serac_infrastructure PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
     $<INSTALL_INTERFACE:include>
